# ultimate-sql-bootcamp

./: .gitignore  README.md  SQL_RUNNER_GUIDE.md  demo.py  pyproject.toml  run_sql.py  sample.db  sql_runner.py
bootcamp-code/Section 2 - SQL Introduction/: S2_1 - SQL Anatomy.sql
bootcamp-code/Section 3 - DDL/: S3_1 - USE.sql  S3_2 - CREATE (account-level objects).sql  S3_3 - CREATE (schema-level objects).sql  S3_4 - ALTER.sql  S3_5 - SHOW.sql  S3_6 - DESCRIBE.sql  S3_7 - DROP.sql
bootcamp-code/Section 4 - DML/: S4_1 - INSERT.sql  S4_2 - UPDATE.sql  S4_3 - DELETE.sql  S4_4 - TRUNCATE.sql  S4_5 - MERGE.sql  S4_6 - COPY INTO table.sql  imdb_movies.csv
bootcamp-code/Section 5 - DQL/: S5_1 - FROM.sql  S5_2 - WHERE.sql  S5_3 - ORDER BY.sql  S5_4 - GROUP BY.sql  S5_5 - HAVING.sql
bootcamp-code/Section 6 - DQL Intermediate/: S6_1 - TPCH.sql  S6_2 - Subqueries.sql  S6_3 - Joining Part 1.sql  S6_4 - Joining Part 2.sql  S6_5 - Set Operators.sql  S6_6 - Conditional Expressions.sql
bootcamp-code/Section 7 - Query Performance Tuning/: S7_1 - Query Performance Analysis Tools.sql  S7_2 - EXPLAIN Statement.sql
data/: README.md  sample.db.wal
database/: README.md  starwars.sql  tpc-h.sql
docs/: CHEATSHEET.md  DATABASE_SCHEMAS.md  DATA_FILES_REFERENCE.md  SETUP.md  SQL_RUNNER_GUIDE.md  STARWARS_DATABASE_SCHEMA.md  TPC-H_DATABASE_SCHEMA.md
examples/: data-loading.sql  example.py  example.sql  starwars-demo.sql  tpc-h-demo.sql  tpc-h.sql
tools/: generate_lineitem_only.py  generate_swapi_sql.py  generate_tpch_data.py  resolve_references.py  swapi_data.py
(+104 files in other folders)
