[tool.poetry]
name = "sql-practice"
version = "0.1.0"
description = "SQL practice environment using DuckDB"
authors = ["Nuno Barreto <nbarreto@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
duckdb = "^1.0.0"
requests = "^2.31.0"
pandas = "^2.0.0"
numpy = "^1.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
